<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Real Nigeria</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="appname">CS314 QuizApp</string>
    <string name="authors">show us how much of a NIGERIAN you are</string>
    <string name="instruction">Challenge Instructions</string>
    <string name="startQuiz">Take the Challenge</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="previous">Prev</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_question2">Question 2</string>
    <string name="title_activity_question3">Question 3</string>
    <string name="title_activity_question1">Question 1</string>
    <string name="title_activity_question4">Question 4</string>
    <string name="title_activity_question5">Question 5</string>
    <string name="title_activity_question6">Question 6</string>
    <string name="title_activity_question7">Question 7</string>
    <string name="title_activity_question8">Question 8</string>
    <string name="title_activity_question9">Question 9</string>
    <string name="title_activity_question10">Question 10</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="ListOfInstructions">Challenge Instructions\n\nThe Real Nigerian Quiz is here to test how much of a Nigerian you are.
    \n\nThe quiz contains 5 difficulty levels. Each level contains 5 questions.
        \n\nYou need to answer at least 4 questions to make it to the next level.
    \n\nThe Levels are Iron, Bronze, Silver, Gold, and Diamond Stage
    \n\n Enough talk, show us how REAL you are</string>

</resources>