

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/backk"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".instruction" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ListOfInstructions"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/previous"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@drawable/buttontwo"
        android:text="@string/previous"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/startQuiz"
        android:textStyle="normal|bold"
        android:background="@drawable/buttontwo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:textSize="20sp" />



</RelativeLayout>