
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/flag"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="The Real"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <Button
            android:id="@+id/instruction"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/instruction"
            android:textStyle="normal|bold"
            android:background="@drawable/buttontwo"
            android:textColor="#ffffff"
            android:layout_above="@+id/startQuiz"
            android:layout_centerHorizontal="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/startQuiz"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/startQuiz"
            android:textStyle="bold"
            android:background="@drawable/buttontwo"
            android:textColor="#ffffff"
            android:layout_above="@+id/textView2"
            android:layout_alignLeft="@+id/instruction"
            android:layout_alignStart="@+id/instruction"
            android:layout_marginBottom="49dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/authors"
            android:textStyle="bold|italic"
            android:textSize="23sp"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="NIGERIAN"
            android:textSize="60sp"
            android:textStyle="normal|bold"
            android:textColor="#ffffff"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true" />

</RelativeLayout>